# Gilgamesh

./: CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: Anchor.hpp.117AC6D8C6198D34.idx  Anchor.hpp.2C2D54EA54FF273F.idx  Anchor.hpp.B8DC8F13D7068DAC.idx  Application.cpp.569777F4BDEAA185.idx  Application.cpp.650AFE8C49E768E2.idx  Application.cpp.73CD1933617EC944.idx  Application.cpp.808B083388A236E1.idx  Application.hpp.52A5A34246047000.idx  Application.hpp.7EC64E83DBE5C99D.idx  Application.hpp.81011B4ED885E905.idx  Application.hpp.A56B69215C332DCC.idx  Asserts.hpp.4801E81CEDAE256E.idx  Asserts.hpp.AF50D9B369044A3E.idx  AssetManager.cpp.41CD049F3C68BB37.idx  AssetManager.cpp.52A5A92C7CDFB80F.idx  AssetManager.cpp.E671200CAE42B297.idx  AssetManager.cpp.F8AA834B2F3F827C.idx  AssetManager.hpp.793C5F07F95928A0.idx  AssetManager.hpp.7BFD8EA656C7B24B.idx  AssetManager.hpp.95E3EF08174A1274.idx  AssetManager.hpp.B60EC1A3DDED71EA.idx  AssetManager.hpp.D8549065327E5D3F.idx  BoxCollider2D.cpp.594439FF6918E275.idx  BoxCollider2D.cpp.761A41137DAAA4EF.idx  Button.cpp.6B3305DAB287FF76.idx  Button.cpp.7F0BA8CAAECBE39B.idx  Color.cpp.5DBCA05FE3D08C45.idx  Color.cpp.6B37ABB6D984F8DD.idx  Color.cpp.92201D97BA41C05E.idx  Color.cpp.92CBBCA9707A25ED.idx  Color.hpp.033AC5809E64CA7A.idx  Color.hpp.63ABC952949AAD83.idx  Color.hpp.7BE59F954326FF37.idx  Color.hpp.885C193B9EBBDD6D.idx  Color.hpp.EAD16089BE7D47FE.idx  Components.hpp.582782E279DA0A31.idx  Components.hpp.B5BE9A1802FDBA86.idx  Components.hpp.FC4B40CECB11A215.idx  Defines.hpp.954F0A7B1B3F5DC0.idx  Defines.hpp.C4DC56C17985A68E.idx  (+1467 more)
Gilgamesh/include/Gilgamesh/: GilgPCH.hpp  Gilgamesh.hpp
Gilgamesh/include/Gilgamesh/Components/: Anchor.hpp  Components.hpp  Shape2DType.hpp  TextType.hpp  Transform2D.hpp
Gilgamesh/include/Gilgamesh/Core/: Application.hpp  Asserts.hpp  Defines.hpp  Log.hpp  Memory.hpp  Window.hpp
Gilgamesh/include/Gilgamesh/Events/: EventFuncs.hpp
Gilgamesh/include/Gilgamesh/Graphics/: Color.hpp  Renderer2D.hpp
Gilgamesh/include/Gilgamesh/Input/: KeyCode.hpp  KeyboardInput.hpp
Gilgamesh/include/Gilgamesh/Managers/: AssetManager.hpp  EventManager.hpp  SceneManager.hpp
Gilgamesh/include/Gilgamesh/Math/: Vec2.hpp
Gilgamesh/include/Gilgamesh/Scene/: Entity.hpp  Scene2D.hpp
Gilgamesh/include/Gilgamesh/Utils/: Random.hpp  Utils.hpp
Gilgamesh/src/Components/: Transform2D.cpp
Gilgamesh/src/Core/: Application.cpp  Log.cpp  Memory.cpp  Window.cpp
Gilgamesh/src/Graphics/: Color.cpp  Renderer2D.cpp
Gilgamesh/src/Input/: KeyboardInput.cpp
Gilgamesh/src/Managers/: AssetManager.cpp  EventManager.cpp  SceneManager.cpp
Gilgamesh/src/Scene/: Scene2D.cpp
Gilgamesh/src/Utils/: Utils.cpp
Testbed/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/basic_app/: game.cpp  game.h  main.cpp
assets/shaders/: basic.glsl  basic3d.glsl  batch.frag.glsl  batch.glsl  batch.vert.glsl  camera.glsl  camera.vert.glsl  inst.frag.glsl  inst.glsl  inst.vert.glsl  test.frag.glsl  test.glsl  test.vert.glsl  texture.glsl  texture.vert.glsl
gilgamesh/src/: main.cpp
gilgamesh/src/core/: application.cpp  application.h  defines.h  event.cpp  event.h  gilg_asserts.h  logger.cpp  logger.h  memory_alloc.cpp  window.cpp  window.h
gilgamesh/src/graphics/: renderer.cpp  renderer.h  shader.cpp  shader.h  texture2d.h
gilgamesh/src/graphics/backend/: buffer.h  graphics_context.h  vertex_array.cpp  vertex_array.h
libs/include/imgui/: imgui.h
libs/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
scripts/: build_all.sh  build_all_and_run.sh  build_engine.sh  build_tests.sh  clean_all.sh  run_test.sh
src/gilgamesh/: gilgamesh.h  main.cpp
src/gilgamesh/core/: application.cpp  application.h  clock.cpp  clock.h  engine.cpp  engine.h  event.cpp  event.h  gilg_asserts.h  input.cpp  input.h  logger.cpp  logger.h  memory_alloc.cpp  memory_alloc.h  window.cpp  window.h
src/gilgamesh/editor/: editor.cpp  editor.h
src/gilgamesh/graphics/: camera3d.cpp  camera3d.h  color.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  renderer_queue.cpp  renderer_queue.h  shader_lib.cpp  shader_lib.h  texture2d.cpp
src/gilgamesh/graphics/backend/: buffer.h  graphics_context.cpp  graphics_context.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h
src/gilgamesh/math/: gilg_random.cpp  gilg_random.h  math_utils.cpp  math_utils.h  transform.cpp  transform.h  vertex.h
src/gilgamesh/resources/: mesh.cpp  mesh.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
testbed/: CMakeLists.txt
testbed/core_test/: main.cpp
